two tests added to RequestTest